force-app/main/default/objects/gupshupcrm__Messaging_End_User_Consent__c/gupshupcrm__Messaging_End_User_Consent__c.object-meta.xml
<CustomObject>
    <label>Messaging End User Consent</label>
    <nameField>
        <label>Messaging End User Consent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Messaging End User Consents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>