force-app/main/default/objects/gupshupcrm__Messaging_End_User_Consent__c/fields/gupshupcrm__Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Channel_Id__c</fullName>
    <label>Channel Id</label>
    <referenceTo>gupshupcrm__WhatsApp_Channel__c</referenceTo>
    <relationshipLabel>Messaging End User Consents</relationshipLabel>
    <relationshipName>Messaging_End_User_Consents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>