force-app/main/default/objects/gupshupcrm__Messaging_End_User_Consent__c/fields/gupshupcrm__Consent__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Consent__c</fullName>
    <label>Consent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opt-In</fullName>
            </value>
            <value>
                <fullName>Opt-Out</fullName>
                <default>true</default>
                <label>Opt-Out</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>