force-app/main/default/objects/gupshupcrm__Messaging_End_User_Consent__c/fields/gupshupcrm__Message_Type__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Message_Type__c</fullName>
    <label>Message Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WhatsApp Message</fullName>
                <default>true</default>
                <label>WhatsApp Message</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>