force-app/main/default/objects/gupshupcrm__Messaging_End_User_Consent__c/fields/gupshupcrm__Phone__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>